--- a/src/LikeAFoxAspNg.Web/ClientApp/package.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/package.json
@@ -16,7 +16,7 @@
     "ng": "ng",
     "clean:install": "rimraf node_modules & yarn",
     "start": "ng serve",
-    "build": "npm run build",
+    "build": "npm run-script build",
     "build:ssr": "npm run build --project=ssr",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -70,15 +70,6 @@
     "typescript": "2.7.2",
     "webpack-bundle-analyzer": "2.13.1"
   },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupTestFrameworkScriptFile": "<rootDir>/src/setupJest.ts",
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png)$": "<rootDir>/__mocks__/image.js",
-      "@app/(.*)": "<rootDir>/src/app/$1",
-      "assets/(.*)": "<rootDir>/src/assets/$1",
-      "environments/(.*)": "<rootDir>/src/environments/$1"
-    }
-  },
+ 
   "license": "MIT"
 }
