--- a/src/LikeAFoxAspNg.Web/ClientApp/package.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/package.json
@@ -16,7 +16,7 @@
     "ng": "ng",
     "clean:install": "rimraf node_modules & yarn",
     "start": "ng serve",
-    "build": "./node_modukes/.bin/ng build --prod",
+    "build": "ng build --prod",
     "build:ssr": "npm run build --project=ssr",
     "lint": "ng lint",
     "e2e": "ng e2e",
