name changes for ico

--- a/src/LikeAFoxAspNg.Web/ClientApp/ngsw-config.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/ngsw-config.json
@@ -9,7 +9,7 @@
       "installMode": "prefetch",
       "resources": {
         "files": [
-          "/favicon-fox.ico",
+          "/favicon.ico",
           "/index.html",
           "/*.css",
           "/*.js"
