--- a/src/LikeAFoxAspNg.Web/ClientApp/src/assets/site.webmanifest.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/assets/site.webmanifest.json
@@ -3,12 +3,12 @@
     "short_name": "AspNetCore & Angular SPA",
     "icons": [
         {
-            "src": "/assets/like-a-fox-192x192.png",
+            "src": "/assets/favicon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/assets/like-a-fox-512x512.png",
+            "src": "/assets/favicon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
