--- a/src/LikeAFoxAspNg.Web/ClientApp/angular.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/angular.json
@@ -23,7 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/assets/favicon-fox.ico",
+              "src/assets/favicon.ico",
               "src/assets"
             ],
             "styles": [
@@ -86,7 +86,7 @@
 
             ],
             "assets": [
-              "src/assets/favicon-fox.ico",
+              "src/assets/favicon.ico",
               "src/assets"
             ]
           }
