--- a/src/LikeAFoxAspNg.Web/ClientApp/package.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/package.json
@@ -59,15 +59,17 @@
     "@angular/compiler-cli": "6.0.6",
     "@angular/language-service": "6.0.6",
     "@angular/service-worker": "6.0.6",
-    "@compodoc/compodoc": "1.1.3",
+    "@compodoc/compodoc": "^1.1.3",
     "@types/node": "10.3.4",
     "codelyzer": "4.3.0",
+    "fsevents": "^1.2.4",
     "jest": "23.1.0",
     "jest-preset-angular": "5.2.2",
     "protractor": "5.3.2",
     "ts-node": "6.1.2",
     "tslint": "5.10.0",
     "typescript": "2.7.2",
+    "uuid": "^3.3.0",
     "webpack-bundle-analyzer": "2.13.1"
   },
   "license": "MIT"
