--- a/src/LikeAFoxAspNg.Web/ClientApp/angular.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "~@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles/foxTheme.scss"
             ],
             "scripts": [
 
@@ -80,7 +82,9 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
 
-              "src/styles.scss"
+              "src/styles.scss",
+              "~@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles/foxTheme.scss"
             ],
             "scripts": [
 
