--- a/src/LikeAFoxAspNg.Web/ClientApp/package.json
+++ b/src/LikeAFoxAspNg.Web/ClientApp/package.json
@@ -29,12 +29,14 @@
   },
   "dependencies": {
     "@angular/animations": "6.0.6",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "6.0.6",
     "@angular/compiler": "6.0.6",
     "@angular/compiler-cli": "6.0.6",
     "@angular/core": "6.0.6",
     "@angular/forms": "6.0.6",
     "@angular/http": "6.0.6",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "6.0.6",
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/platform-server": "6.0.6",
